[bdist_wheel]
universal = 1

[flake8]
import-order-style = pep8
application-import-names = yamllint
ignore = W503,W504

[build_sphinx]
all-files = 1
source-dir = docs
build-dir = docs/_build
warning-is-error = 1

[metadata]
keywords =
  yaml
  lint
  linter
  syntax
  checker

url = https://github.com/adrienverge/yamllint
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Software Development
  Topic :: Software Development :: Debuggers
  Topic :: Software Development :: Quality Assurance
  Topic :: Software Development :: Testing

project_urls =
  Documentation = https://yamllint.readthedocs.io
  Download = https://pypi.org/project/yamllint/#files
  Bug Tracker = https://github.com/adrienverge/yamllint/issues
  Source Code = https://github.com/adrienverge/yamllint

[options]
packages = find:

python_requires = >=3.5

include_package_data = True
install_requires =
  pathspec >= 0.5.3
  pyyaml
  setuptools

test_suite = tests

[options.packages.find]
exclude =
  tests
  tests.*

[options.package_data]
yamllint = conf/*.yaml

[options.entry_points]
console_scripts =
  yamllint = yamllint.cli:run

[coverage:run]
relative_files = True
